# dev-assistant

./: .env.example  .gitignore  LICENSE  README.md  chat.html  docker-compose.airflow.yaml  docker-compose.llama.yaml  docker-compose.yaml
airflow/: requirements.txt
airflow/dags/: gitlab_indexer.py
dev-assistant/: .env.example  .flake8  Dockerfile  pyproject.toml
dev-assistant-ui/: chat.html  package-lock.json  package.json  vite.config.ts
dev-assistant-ui/mock/: api.mock.ts  set-project-info.mock.ts
dev-assistant-ui/src/: App.vue  FileList.vue  HistoryList.vue  Messages.vue  Prompt.vue  Settings.vue  additional.d.ts  chat.ts  debounce.ts  events.ts  main.ts  types.ts  utils.ts
dev-assistant-ui/src/assets/: main.css
dev-assistant/dev_assistant/: __main__.py  agent.py  celery_app.py  celery_tasks.py  chunking.py  config.py  model.py  otel.py  otel_logging.py  rag.py  server.py  system_prompt_template.md  tools.py
dev-assistant/dev_assistant/tools/: __init__.py  calculator.py  create_file.py  edit_file.py  find_file.py  list_files.py  read_file.py  terminal.py  utils.py
etc/: litellm_config.yaml  loki-config.yaml  otel-collector-config.yaml  prometheus.yaml  tempo.yaml  vllm_logging.json
etc/grafana/provisioning/datasources/: ds.yml
ir-benchmark/: README.md  calc_metrics.ipynb  make_dataset.ipynb
ir-benchmark/BuildDataset/: BuildDataset.sln  Program.cs  README.md
llm-benchmark/: Dockerfile  README.md  entrypoint.sh
vllm-cuda/: Dockerfile
