[project]
name = "dev-assistant"
version = "0.1.0"
description = "Developer Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litserve>=0.2.17",
    "llama-index>=0.14.12",
    "llama-index-embeddings-openai-like>=0.2.2",
    "llama-index-llms-openai-like>=0.5.3",
    "llama-index-retrievers-bm25>=0.6.5",
    "llama-index-vector-stores-qdrant>=0.9.1",
    "qdrant-client>=1.16.2",
]
